--- a/style.css
+++ b/style.css
@@ -4,13 +4,23 @@
 }
 
 body {
-    background-color: rgb(211, 179, 241);
+    background-color: #acacff;
 }
 
 main {
     background-color: white;
-    width: 500px;
+    width: 560px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.479);
+}
+
+h1 {
+    font-size: 2em;
+    color: blueviolet;
+}
+
+h2 {
+    font-size: 1.5em;
+    color: blueviolet;
 }
