--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,6 +15,10 @@ main {
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.479);
 }
 
+img.lado {
+    float: right;
+}
+
 h1 {
     font-size: 2em;
     color: blueviolet;
